# cloth-simulation

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/: bed.ply  buddha.ply  bunny_low.ply  heart.ply  teapot.ply  testBuddha.ply
debug/ClothSimDebug/nsightDebug/: nsightDebug.ncu-proj
include/: bvh.h  bvh.hcu  camera.h  collider.h  collisions_solver.hcu  cuda_utils.hcu  explicit_solver.hcu  mesh.hcu  renderer.h  shader.h  simulation.h  simulation_params.h  solver.h  ui.h
shaders/: cloth.fs  cloth.vs  ground.fs  ground.vs  sphere.fs  sphere.vs
src/: main.cu
vendors/glad/: glad.c  glad.h
vendors/glfw/: CMakeLists.txt
vendors/imgui/: imgui.cpp
vendors/objparser/: OBJ_Loader.h
